Update confetti colors to match Kage brand

--- a/templates/index.html
+++ b/templates/index.html
@@ -511,7 +511,7 @@
     document.head.appendChild(confettiStyle);
 
     function createConfetti(originX, originY) {
-        const colors = ['#cba6f7', '#fab387', '#b4befe', '#f5c2e7', '#94e2d5'];
+        const colors = ['#a78bfa', '#e07b53', '#c4b5fd', '#e879b9', '#94e2d5'];
 
         for (let i = 0; i < 10; i++) {
             const particle = document.createElement('div');
