docs: update cargo install to use raskell-kage

--- a/templates/index.html
+++ b/templates/index.html
@@ -488,7 +488,7 @@
 <script>
     const installCommands = {
         script: "curl -fsSL https://kage.raskell.io/install.sh | sh",
-        cargo: "cargo install kage",
+        cargo: "cargo install raskell-kage",
         docker: "docker pull ghcr.io/raskell-io/kage:latest",
     };
 
